name:                cardano-sl
version:             0.4.4
synopsis:            Cardano SL main implementation
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag with-web
  default:     True
  manual:      True

  description: Build with web part.

Flag with-wallet
  default:     True
  manual:      True

  description: Build with wallet.

Flag with-explorer
  default:     False
  manual:      True

  description: Build with explorer

-- Note: for components that we don't want to build, we add both "buildable:
-- False" *and* wrap build-depends into "if !flag(for-installer)". This is
-- because stack doesn't seem to take "buildable: False" into account when
-- calculating the build plan.
Flag for-installer
  default:     False
  manual:      True

  description: Build a reduced set of components (only what is needed for the
               installer, plus tests)

library
  exposed-modules:      Pos.Aeson
                        Pos.Binary
                        Pos.Block.Arbitrary
                        Pos.Block.BListener
                        Pos.Block.Core
                        Pos.Block.Logic
                        Pos.Block.Network
                        Pos.Block.Pure
                        Pos.CLI
                        Pos.Context
                        Pos.CompileConfig
                        Pos.Communication
                        Pos.Constants
                        Pos.Crypto.Arbitrary

                        Pos.DB.DB
                        Pos.DB.Block
                        Pos.DB.GState

                        Pos.Delegation

                        -- Genesis data
                        Pos.Genesis
                        Pos.Genesis.Arbitrary

                        -- LRC
                        Pos.Lrc
                        Pos.Lrc.FtsPure

                        -- Slotting
                        Pos.Slotting.Arbitrary

                        -- Something
                        Pos.Launcher

                        Pos.Security
                        Pos.Security.Class
                        Pos.Security.Workers

                        -- SSC
                        Pos.Ssc.Arbitrary
                        Pos.Ssc.GodTossing
                        Pos.Ssc.NistBeacon
                        Pos.Ssc.SscAlgo

                        -- Client
                        Pos.Client.Txp.Balances
                        Pos.Client.Txp.History
                        Pos.Client.Txp.Util

                        -- Txp
                        Pos.Txp

                        Pos.Types
                        Pos.Types.Arbitrary
                        Pos.Types.Arbitrary.Core
                        Pos.Types.Arbitrary.Unsafe

                        -- Update system
                        Pos.Update
                        Pos.Update.Arbitrary

                        -- Utilities/helpers
                        Pos.Util
                        Pos.Util.Undefined
                        Pos.Util.Arbitrary
                        Pos.Util.BackupPhrase
                        Pos.Util.JsonLog
                        Pos.Util.UserSecret

                        -- Wallets
                        Pos.Wallet.Web.Secret

                        -- Worker, work mode
                        Pos.Worker
                        Pos.WorkMode
                        Pos.WorkMode.Class
  -- Explorer (TODO: move into cardano-explorer)
  exposed-modules:
                        Pos.Explorer
  if flag(with-web)
    exposed-modules:    Pos.Web
  if flag(with-wallet)
    exposed-modules:    Pos.Wallet
                        Pos.Wallet.Light
  if flag(with-wallet) && flag(with-web)
    exposed-modules:    Pos.Wallet.Web
  if flag(with-web) || flag(with-explorer)
    exposed-modules:    Pos.Util.Servant
  other-modules:        Paths_cardano_sl

                        Pos.Aeson.CompileConfig

                        -- Binary serialization
                        Pos.Binary.Block
                        Pos.Binary.Block.Block
                        Pos.Binary.Block.Core
                        Pos.Binary.Communication
                        Pos.Binary.Delegation
                        Pos.Binary.Relay
                        Pos.Binary.Ssc
                        Pos.Binary.Txp
                        Pos.Binary.Txp.Network

                        -- Block processing
                        Pos.Block.Core.Genesis
                        Pos.Block.Core.Genesis.Chain
                        Pos.Block.Core.Genesis.Lens
                        Pos.Block.Core.Genesis.Misc
                        Pos.Block.Core.Genesis.Types
                        Pos.Block.Core.Main
                        Pos.Block.Core.Main.Chain
                        Pos.Block.Core.Main.Helpers
                        Pos.Block.Core.Main.Lens
                        Pos.Block.Core.Main.Misc
                        Pos.Block.Core.Main.Types
                        Pos.Block.Core.Union
                        Pos.Block.Core.Union.Misc
                        Pos.Block.Core.Union.Types
                        Pos.Block.Error
                        Pos.Block.Logic.Creation
                        Pos.Block.Logic.Header
                        Pos.Block.Logic.Internal
                        Pos.Block.Logic.Slog
                        Pos.Block.Logic.Util
                        Pos.Block.Logic.VAR
                        Pos.Block.Network.Announce
                        Pos.Block.Network.Types
                        Pos.Block.Network.Listeners
                        Pos.Block.Network.Logic
                        Pos.Block.Network.Retrieval
                        Pos.Block.Types
                        Pos.Block.Worker

                        -- Compile config
                        Pos.CompileConfig.Parser
                        Pos.CompileConfig.Type

                        -- NodeContext
                        Pos.Context.Context
                        Pos.Context.Functions

                        -- Crypto
                        Pos.Crypto.Arbitrary.Unsafe
                        Pos.Crypto.HDDiscovery

                        -- Heavy delegation
                        Pos.Delegation.Arbitrary
                        Pos.Delegation.Class
                        Pos.Delegation.DB
                        Pos.Delegation.Helpers
                        Pos.Delegation.Listeners
                        Pos.Delegation.Logic
                        Pos.Delegation.Logic.Common
                        Pos.Delegation.Logic.Mempool
                        Pos.Delegation.Logic.VAR
                        Pos.Delegation.Lrc
                        Pos.Delegation.Types
                        Pos.Delegation.Worker

                        -- Launcher
                        Pos.Launcher.Launcher
                        Pos.Launcher.Options
                        Pos.Launcher.Param
                        Pos.Launcher.Resource
                        Pos.Launcher.Runner
                        Pos.Launcher.Scenario

                        -- Network
                        Pos.Communication.Types
                        Pos.Communication.Message
                        Pos.Communication.Methods
                        Pos.Communication.Tx
                        Pos.Communication.Server
                        Pos.Communication.Limits
                        Pos.Communication.Update

                        -- DB
                        Pos.DB.GState.BlockExtra
                        Pos.DB.GState.GState
                        Pos.DB.Misc

                        -- LRC
                        Pos.Lrc.Arbitrary
                        Pos.Lrc.Consumers
                        Pos.Lrc.DB
                        Pos.Lrc.DB.Leaders
                        Pos.Lrc.DB.Lrc
                        Pos.Lrc.DB.Richmen
                        Pos.Lrc.Logic
                        Pos.Lrc.Worker

                        Pos.Recovery.Instance

                        -- SafeCopy serialization (required in wallet)
                        Pos.SafeCopy

                        -- SSC
                        Pos.Ssc.Util

                        Pos.Ssc.GodTossing.Arbitrary

                        -- Txp
                        Pos.Txp.Arbitrary
                        Pos.Txp.Network
                        Pos.Txp.Network.Listeners
                        Pos.Txp.Network.Types
                        Pos.Txp.Worker

                        -- Update System
                        Pos.Update.Arbitrary.Core
                        Pos.Update.Arbitrary.MemState
                        Pos.Update.Arbitrary.Network
                        Pos.Update.Arbitrary.Poll
                        Pos.Update.Download
                        Pos.Update.Network
                        Pos.Update.Network.Listeners
                        Pos.Update.Worker

                        -- Wallet (intentionally separated, not alphabetically)
                        Pos.Wallet.KeyStorage
                        Pos.Wallet.Web.Error.Types
                        Pos.Wallet.Web.Util

  -- Explorer (TODO: move into cardano-explorer)
  other-modules:        Pos.Binary.Explorer
                        Pos.Explorer.Core
                        Pos.Explorer.Core.Types
                        Pos.Explorer.Txp
                        Pos.Explorer.Txp.Global
                        Pos.Explorer.Txp.Local
                        Pos.Explorer.Txp.Toil
                        Pos.Explorer.Txp.Toil.Class
                        Pos.Explorer.Txp.Toil.Logic
                        Pos.Explorer.Txp.Toil.Types
                        Pos.Explorer.DB

  if flag(with-web)
    other-modules:      Pos.Aeson.Crypto
                        Pos.Aeson.Types
                        Pos.Web.Api
                        Pos.Web.Server
                        Pos.Web.Types
  if flag(with-wallet)
    exposed-modules:
                        Pos.Wallet.Redirect
    other-modules:
                        Pos.Wallet.Light.Launcher
                        Pos.Wallet.Light.Launcher.Runner
                        Pos.Wallet.Light.Launcher.Param
                        Pos.Wallet.Light.State
                        Pos.Wallet.Light.State.Acidic
                        Pos.Wallet.Light.State.Core
                        Pos.Wallet.Light.State.State
                        Pos.Wallet.Light.State.Storage
                        Pos.Wallet.Light.State.Storage.Block
                        Pos.Wallet.Light.State.Storage.Tx
                        Pos.Wallet.SscType
                        Pos.Wallet.WalletMode
  if (flag(with-wallet) && flag(with-web))
    other-modules:      Pos.Aeson.ClientTypes
                        Pos.Wallet.Light.Mode
                        Pos.Wallet.Light.Redirect
                        Pos.Wallet.Light.Web
                        Pos.Wallet.Light.Web.Server
                        Pos.Wallet.Web.Account
                        Pos.Wallet.Web.Api
                        Pos.Wallet.Web.BListener
                        Pos.Wallet.Web.ClientTypes
                        Pos.Wallet.Web.Error
                        Pos.Wallet.Web.Error.Util
                        Pos.Wallet.Web.Server
                        Pos.Wallet.Web.Server.Methods
                        Pos.Wallet.Web.Server.Full
                        Pos.Wallet.Web.Server.Full.Common
                        Pos.Wallet.Web.Server.Full.R
                        Pos.Wallet.Web.Server.Sockets
                        Pos.Wallet.Web.State
                        Pos.Wallet.Web.State.Acidic
                        Pos.Wallet.Web.State.Holder
                        Pos.Wallet.Web.State.Core
                        Pos.Wallet.Web.State.State
                        Pos.Wallet.Web.State.Storage
                        Pos.Wallet.Web.Tracking

  build-depends:        IfElse
                      , QuickCheck
                      , acid-state
                      , aeson >= 0.11.2.1
                      , ansi-terminal
                      , async
                      , base
                      , base58-bytestring
                      , base64-bytestring
                      , binary
                      , binary-conduit >= 1.2.4.1
                      , binary-orphans
                      , bytestring
                      , cardano-crypto
                      , cardano-report-server >= 0.1.1
                      , cardano-sl-core
                      , cardano-sl-db
                      , cardano-sl-godtossing
                      , cardano-sl-infra
                      , cardano-sl-lrc
                      , cardano-sl-ssc
                      , cardano-sl-txp
                      , cardano-sl-update
                      , cereal
                      , conduit >= 1.2.8
                      , containers
                      , cryptonite >= 0.23 && <= 0.23
                      , cryptonite-openssl >= 0.6
                      , data-default
                      , deepseq
                      , derive
                      , deriving-compat
                      , digest
                      , directory
                      , dlist
                      , ed25519
                      , ekg
                      , ekg-core
                      , ether >= 0.5
                      , exceptions
                      , file-embed >= 0.0.10
                      , filelock >= 0.1.0.1
                      , filepath
                      , focus
                      , formatting
                      , gitrev
                      , hashable
                      , http-client
                      , http-client-tls
                      , http-conduit
                      , kademlia
                      , lens
                      , lifted-async
                      , list-t
                      , log-warper >= 1.1.1
                      , lrucache
                      , memory
                      , mmorph
                      , monad-control
                      , monad-loops
                      , mono-traversable
                      , mtl
                      , neat-interpolation
                      , network-info >= 0.2.0.8
                      , network-transport-tcp
                      , node-sketch >= 0.1.0.0
                      , optparse-applicative
                      , optparse-simple
                      , parsec
                      , plutus-prototype
                      , pvss
                      , quickcheck-instances
                      , random
                      , reflection
                      , resourcet
                      , rocksdb >= 0.1.0.1
                      , safecopy
                      , serokell-util >= 0.1.3.4
                      , stm
                      , stm-containers
                      , tagged
                      , template-haskell
                      , temporary >= 1.2.0.4
                      , text
                      , text-format
                      , th-lift-instances
                      , time
                      , time-units
                      , transformers
                      , transformers-base
                      , transformers-lift
                      , turtle
                      , universum >= 0.1.11
                      , unordered-containers
                      , vector
                      , wreq
                      , yaml

  if !os(windows)
    build-depends:      unix

  if flag(with-web)
    build-depends:      http-types
                      , servant >= 0.8.1
                      , servant-multipart >= 0.10
                      , servant-server >= 0.8.1
                      , wai
                      , wai-extra
                      , warp
                      , websockets
                      , wai-websockets
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  -- for explorer linking see https://ghc.haskell.org/trac/ghc/ticket/13810
  if os(linux) && !flag(with-explorer)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(with-web)
    cpp-options: -DWITH_WEB
  if flag(with-wallet)
    cpp-options: -DWITH_WALLET
  if flag(with-explorer)
    cpp-options: -DWITH_EXPLORER

executable cardano-node
  hs-source-dirs:      src/node
  main-is:             Main.hs
  other-modules:       NodeOptions
                     , Params
                     , Secrets
  build-depends:       base
                     , ansi-wl-pprint
                     , binary
                     , bytestring
                     , cardano-sl-core
                     , cardano-sl-infra
                     , cardano-sl-lrc
                     , cardano-sl-update
                     , cardano-sl-ssc
                     , cardano-sl
                     , containers
                     , data-default
                     , directory
                     , ether
                     , filepath
                     , formatting
                     , lens
                     , log-warper
                     , mtl
                     , network-transport
                     , node-sketch
                     , network-transport-tcp
                     , optparse-simple
                     , parsec
                     , serokell-util >= 0.1.3.4
                     , stm-containers
                     , string-qq
                     , time
                     , time-units
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(with-web)
    cpp-options: -DWITH_WEB
  if flag(with-wallet)
    cpp-options: -DWITH_WALLET

executable cardano-analyzer
  hs-source-dirs:      src/analyzer
  main-is:             Main.hs
  other-modules:       AnalyzerOptions
  if !flag(for-installer)
   build-depends:      base
                     , aeson
                     , ansi-wl-pprint
                     , attoparsec
                     , bytestring
                     , cardano-sl-core
                     , cardano-sl-infra
                     , cardano-sl
                     , formatting
                     , log-warper
                     , optparse-simple
                     , serokell-util >= 0.1.3.4
                     , string-qq
                     , text
                     , time
                     , time-units
                     , universum >= 0.1.11
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(for-installer)
    buildable: False

executable cardano-wallet
  hs-source-dirs:      src/wallet
  main-is:             Main.hs
  other-modules:       WalletOptions
                       Command
  if !flag(for-installer)
   build-depends:      QuickCheck
                     , base
                     , ansi-wl-pprint
                     , base58-bytestring
                     , binary
                     , bytestring
                     , cardano-sl-core
                     , cardano-sl-update
                     , cardano-sl-infra
                     , cardano-sl
                     , either
                     , containers
                     , formatting
                     , lens
                     , lifted-async
                     , log-warper
                     , mtl
                     , network-transport-tcp
                     , node-sketch
                     , optparse-applicative
                     , parsec
                     , serokell-util >= 0.1.3.4
                     , string-qq
                     , text
                     , time
                     , time-units
                     , transformers
                     , universum >= 0.1.11
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(with-wallet)
    buildable:         True
  else
    buildable:         False

  if flag(with-web)
    cpp-options:      -DWITH_WEB

  if !os(windows)
    build-depends:     unix

  if flag(for-installer)
    buildable: False

executable cardano-wallet-hs2purs
  hs-source-dirs:      src/wallet-purescript
  main-is:             Main.hs
  other-modules:       PSTypes
  build-depends:       base
                     , cardano-sl-core
                     , cardano-sl
                     , optparse-simple
                     , purescript-bridge
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(with-wallet) && flag(with-web)
    buildable:         True
  else
    buildable:         False

  if flag(with-web)
    cpp-options: -DWITH_WEB

executable cardano-smart-generator
  hs-source-dirs:      src/smart-generator
  main-is:             Main.hs
  other-modules:       GenOptions
                       TxGeneration
                       TxAnalysis
                       Util
  if !flag(for-installer)
   build-depends:      QuickCheck
                     , base
                     , aeson
                     , ansi-wl-pprint
                     , array
                     , bytestring
                     , data-default
                     , cardano-sl-core
                     , cardano-sl-infra
                     , cardano-sl-txp
                     , cardano-sl-update
                     , cardano-sl-ssc
                     , cardano-sl
                     , containers
                     , filepath
                     , formatting
                     , lens
                     , lifted-async
                     , log-warper
                     , network-transport-tcp
                     , node-sketch
                     , optparse-applicative
                     , parsec
                     , random
                     , random-shuffle
                     , serokell-util >= 0.1.3.4
                     , stm
                     , string-qq
                     , text
                     , time
                     , time-units
                     , transformers
                     , universum >= 0.1.11
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(with-wallet)
    buildable:         True
  else
    buildable:         False

  if flag(for-installer)
    buildable: False

executable cardano-dht-keygen
  hs-source-dirs:      src/dht-keygen
  main-is:             Main.hs
  if !flag(for-installer)
   build-depends:      QuickCheck
                     , base
                     , aeson
                     , array
                     , bytestring
                     , data-default
                     , cardano-sl-core
                     , cardano-sl
                     , filepath
                     , formatting
                     , kademlia
                     , lens
                     , lifted-async
                     , log-warper
                     , optparse-simple
                     , parsec
                     , random
                     , random-shuffle
                     , serokell-util >= 0.1.3.4
                     , stm
                     , text
                     , time
                     , universum >= 0.1.11
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        ApplicativeDo

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(for-installer)
    buildable: False

executable cardano-swagger
  hs-source-dirs:      src/wallet-web-api-swagger
  main-is:             Main.hs
  other-modules:       Description
  if !flag(for-installer)
   build-depends:      aeson
                     , base
                     , bytestring
                     , cardano-sl
                     , lens
                     , optparse-simple
                     , swagger2
                     , servant
                     , servant-server
                     , servant-multipart
                     , servant-swagger
                     , servant-swagger-ui
                     , text
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   NoImplicitPrelude
                        BangPatterns

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(for-installer)
    buildable: False

  if !flag(with-wallet) || !flag(with-web)
    buildable: False

executable cardano-checks
  hs-source-dirs:      src/checks
  main-is:             Main.hs
  if !flag(for-installer)
   build-depends:      base
                     , ansi-wl-pprint
                     , containers
                     , foldl
                     , optparse-simple
                     , optparse-text
                     , string-qq
                     , text
                     , turtle
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:  OverloadedStrings
                       BangPatterns

  if flag(for-installer)
    buildable: False

executable cardano-genupdate
  hs-source-dirs:      src/genupdate
  main-is:             Main.hs
  build-depends:       base
                     , ansi-wl-pprint
                     , bytestring
                     , cryptonite
                     , foldl
                     , optparse-simple
                     , optparse-text
                     , string-qq
                     , system-filepath
                     , tar
                     , text
                     , turtle >= 1.3.0
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:  OverloadedStrings
                       NoImplicitPrelude
                       BangPatterns
                       ApplicativeDo
                       RecordWildCards

executable cardano-keygen
  hs-source-dirs:      src/keygen
  main-is:             Main.hs
  other-modules:       KeygenOptions
                     , Avvm
                     , Testnet
  if !flag(for-installer)
   build-depends:      QuickCheck >= 2.9
                     , Glob
                     , base
                     , aeson
                     , ansi-wl-pprint
                     , cardano-sl-core
                     , cardano-sl-txp
                     , cardano-sl
                     , ed25519
                     , formatting
                     , universum >= 0.1
                     , serokell-util >= 0.1
                     , text
                     , lens
                     , optparse-applicative >= 0.12
                     , string-qq
                     , unordered-containers
                     , bytestring >= 0.10
                     , random >= 1.1
                     , filepath
                     , directory
                     , log-warper
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns

  if flag(for-installer)
    buildable: False

  if !flag(with-wallet)
    buildable: False

executable cardano-launcher
  hs-source-dirs:      src/launcher
  main-is:             Main.hs
  build-depends:       ansi-wl-pprint
                     , async
                     , base
                     , optparse-simple
                     , cardano-report-server >= 0.1.1
                     , log-warper
                     , cardano-sl
                     , cardano-sl-infra
                     , directory
                     , filepath
                     , process
                     , string-qq
                     , system-filepath
                     , text
                     , turtle
                     , universum
                     , wreq
                     , lens
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:  OverloadedStrings
                       RecordWildCards
                       TupleSections
                       BangPatterns

  if os(windows)
    LD-Options:     -mwindows

executable cardano-addr-convert
  hs-source-dirs:      src/addr-convert
  main-is:             Main.hs
  build-depends:       base
                     , ansi-wl-pprint
                     , bytestring
                     , cardano-sl
                     , cardano-sl-core
                     , directory
                     , filepath
                     , optparse-applicative
                     , optparse-text
                     , process
                     , serokell-util
                     , string-qq
                     , system-filepath
                     , text
                     , turtle
                     , universum
                     , lens
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        ApplicativeDo

executable cardano-cli-docs
  hs-source-dirs:      src/cli-docs
  main-is:             Main.hs
  if !flag(for-installer)
   build-depends:      base
                     , bytestring
                     , directory
                     , filepath
                     , optparse-applicative
                     , process
                     , string-qq
                     , text
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   NoImplicitPrelude
                        BangPatterns
                        RecordWildCards
                        OverloadedStrings
                        ApplicativeDo

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(for-installer)
    buildable: False

test-suite cardano-test
  main-is:             Test.hs
  other-modules:       Spec
                       Test.Pos.Arbitrary.Infra
                       Test.Pos.Arbitrary.Infra.Communication
                       Test.Pos.Arbitrary.Infra.DHT
                       Test.Pos.BinarySpec
                       Test.Pos.Block.LogicSpec
                       Test.Pos.Block.Identity.BinarySpec
                       Test.Pos.Block.Identity.SafeCopySpec
                       Test.Pos.Communication.Identity.BinarySpec
                       Test.Pos.CryptoSpec
                       Test.Pos.DHT.Identity.BinarySpec
                       Test.Pos.FollowTheSatoshiSpec
                       Test.Pos.Genesis.Identity.BinarySpec
                       Test.Pos.MerkleSpec
                       Test.Pos.Script.Identity.BinarySpec
                       Test.Pos.Ssc.GodTossing.ComputeSharesSpec
                       Test.Pos.Ssc.GodTossing.Identity.BinarySpec
                       Test.Pos.Ssc.GodTossing.Identity.SafeCopySpec
                       Test.Pos.Ssc.GodTossing.SeedSpec
                       Test.Pos.Ssc.GodTossing.Toss.BaseSpec
                       Test.Pos.Ssc.GodTossing.VssCertDataSpec
                       Test.Pos.Txp.CoreSpec
                       Test.Pos.Txp.Identity.BinarySpec
                       Test.Pos.Txp.Toil.UtxoSpec
                       Test.Pos.Types.AddressSpec
                       Test.Pos.Types.BlockSpec
                       Test.Pos.Types.CoinSpec
                       Test.Pos.Types.Identity.BinarySpec
                       Test.Pos.Types.Identity.SafeCopySpec
                       Test.Pos.Types.Identity.TimestampSpec
                       Test.Pos.Types.SlottingSpec
                       Test.Pos.Update.Identity.BinarySpec
                       Test.Pos.Update.Identity.SafeCopySpec
                       Test.Pos.Update.MemStateSpec
                       Test.Pos.Update.PollSpec
                       Test.Pos.Util
                       Test.Pos.Util.LimitsSpec
                       Test.Pos.Util.ModifierSpec
                       Test.Pos.UtilSpec
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , binary
                     , bytestring
                     , cardano-sl-core
                     , cardano-sl-infra
                     , cardano-sl-lrc
                     , cardano-sl-txp
                     , cardano-sl-update
                     , cardano-sl-ssc
                     , cardano-sl
                     , cereal
                     , containers
                     , cryptonite
                     , data-default
                     , derive
                     , formatting
                     , hspec
                     , kademlia
                     , lens
                     , log-warper
                     , memory
                     , mtl
                     , node-sketch
                     , pvss
                     , quickcheck-instances
                     , random
                     , reflection
                     , regex-tdfa
                     , regex-tdfa-text
                     , safecopy
                     , serokell-util >= 0.1.3.4
                     , tagged
                     , time-units
                     , universum >= 0.1.11
                     , unordered-containers
                     , vector
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall
                       -fno-warn-orphans

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

benchmark cardano-bench-criterion
  hs-source-dirs:      bench
  main-is:             Local/Criterion.hs
  other-modules:       Bench.Pos.Criterion.FollowTheSatoshiBench
                       Bench.Pos.Criterion.TxSigningBench
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , binary
                     , bytestring
                     , cardano-sl-core
                     , cardano-sl
                     , containers
                     , criterion
                     , derive
                     , formatting
                     , hashtables
                     , lens
                     , log-warper
                     , serokell-util >= 0.1.3.4
                     , text-format
                     , universum >= 0.1.11
                     , vector
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
